# email_writting_agent

./: .env  README.md  ai_agent_companies.json  company_emails.json  main.py  pyproject.toml  req.txt
agent/: company_finder_agent.py  web_scraper_agent.py
