[project]
name = "cover-letter-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "django>=5.2.8",
    "fastapi>=0.121.1",
    "fastmcp>=2.13.0.2",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "ipykernel>=7.1.0",
    "jason>=0.1.7",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-groq>=1.0.0",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-tavily>=0.2.13",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.2",
    "mcp>=1.21.0",
    "mcp-use>=1.4.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sentence-transformers>=3.0.1",
    "simplejson>=3.20.2",
    "sympy>=1.14.0",
    "torch==2.3.1",
    "transformers<4.55.0",
    "uvicorn>=0.38.0",
]
